public interface Ataque {
    void executar(String nome);
}
