public interface Observer {
    void update(String mensagem);
}
